# license_plate

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
docs/: YOLO11_CHAR_TRAINING.md  YOLO11_TRAINING.md
license_plate/generation/assets/vehicle_plates/: auto_back_black_yellow.txt  auto_back_white_double.txt  auto_back_white_single.txt  auto_back_yellow_double.txt  auto_back_yellow_single.txt  auto_front_black_yellow.txt  auto_front_white_double.txt  auto_front_white_single.txt  bike_back_green.txt  (+69 more)
license_plate/generation/generator/: __init__.py  asset_loader.py  augment.py  color.py  plate_generator.py  templates.py  templates_core.py
license_plate/generation/layout/: __init__.py  base.py  containers.py  content.py  renderer.py  units.py
license_plate/generation/scripts/: detect_licence_plate_detic.py  detect_licence_plate_gemini.py  download_fonts.py  generate_closed_font.py  generate_font_previews.py  generate_hsrp_font.py  generate_template_previews.py  generate_training_data.py  generate_vehicles.py
license_plate/training/: __init__.py
license_plate/training/data/: combine_lp_datasets.py  download_lp_datasets.py  generate_training_data.py
license_plate/training/export/: benchmark.py  compare_onnx_accuracy.py  export_onnx.py
license_plate/training/rfdetr/: benchmark.py  build_tensorrt.py  compare_onnx.py  compare_tensorrt.py  export_onnx.py  test_deepstream.py  train_char.py  train_char_medium.py  train_plate.py
license_plate/training/scripts/: benchmark.py  build_tensorrt.py  compare_tensorrt_accuracy.py  generate_training_data.py  label_5k_with_detic.py  train_rfdetr.py
license_plate/training/train/: train_lp_detector.py
license_plate/training/yolo11/: __init__.py  coco_to_yolo.py  export_onnx.py  package_models.py  train_char.py  train_char_detection.py  train_plate.py
