[project]
name = "license-plate"
version = "0.1.0"
description = "Synthetic license plate data generation, plate & character detection training, and a lightweight inference package for end-to-end LPR."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-genai>=1.45.0",
    "pillow>=12.0.0",
    "pydantic>=2.12.2",
    "ultralytics>=8.3.217",
]
