[project]
name = "license-plate"
version = "0.1.0"
description = "Synthetic license plate data generation, plate & character detection training, and a lightweight inference package for end-to-end LPR."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "albumentations>=2.0.8",
    "boto3>=1.42.17",
    "fonttools>=4.60.1",
    "google-genai>=1.45.0",
    "httpx>=0.28.1",
    "numpy>=2.2.6",
    "onnx>=1.17",
    "opencv-python>=4.11.0.86",
    "pillow>=12.0.0",
    "pydantic>=2.12.2",
    "pyyaml>=6.0.3",
    "rfdetr[onnxexport]>=1.3.0",
    "roboflow>=1.2.11",
    "supervision>=0.26.1",
    "tensorboard>=2.20.0",
    "tensorrt>=10.14.1.48.post1",
    "tensorrt-cu12>=10.13.3.9",
    "torch>=2.9.0",
    "ultralytics>=8.3.243",
]

[dependency-groups]
dev = [
    "boto3>=1.42.17",
]
